[package]
name = "hemolymph-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
hemoglobin = "0.6.3"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
